Move to JDK11 (#35)
* Switched project to JDK 11

* Updated Travis file for JDK11

* Changed branch name in readme badge

* Used post JDK8 method to read a string

* Renamed parts of the packaging script to make it more maintainable

* Added SonarQube target

* Updated the readme information